# batara-guru

./: LICENSE  README.md  pyproject.toml
configs/: case1.txt  case2.txt  case3.txt  case4.txt
src/batara_guru/: __init__.py  cli.py
src/batara_guru/core/: __init__.py  solver.py
src/batara_guru/io/: config_manager.py  data_handler.py
src/batara_guru/utils/: logger.py
src/batara_guru/visualization/: __init__.py  plotter.py
