[tool.poetry]
name = "batara-guru"
version = "0.0.1"
description = "Rule 30 Cellular Automaton Analyzer with Parallel Processing"
authors = [
    "Sandy H. S. Herho <sandy.herho@email.ucr.edu>",
    "Gandhi Napitupulu"
]
license = "MIT"
readme = "README.md"
packages = [{include = "batara_guru", from = "src"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = ">=1.20.0"
matplotlib = ">=3.3.0"
netCDF4 = ">=1.5.0"
tqdm = ">=4.60.0"
numba = ">=0.53.0"

[tool.poetry.group.dev.dependencies]
black = ">=22.0.0"

[tool.poetry.scripts]
batara-guru = "batara_guru.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
